# swaggerui/openapi.yml
@@ -100,6 +100,23 @@ paths:
           $ref: '#/components/responses/Forbidden'
         '500':
           $ref: '#/components/responses/Internal'
+  /beers:
+    get:
+      tags: [ beers ]
+      description: Returns a beer transference feed
+      security:
+        - bearerAuth: [ ]
+      responses:
+        '200':
+          description: Beer log
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BeerTransferFeed'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '500':
+          $ref: '#/components/responses/Internal'
   /oauth/url:
     get:
       tags: [ authentication ]
@@ -159,6 +176,21 @@ components:
           type: number
         received:
           type: number
+    BeerTransferFeed:
+      type: array
+      items:
+        type: object
+        properties:
+          giverId:
+            type: string
+          giverName:
+            type: string
+          receiverId:
+            type: string
+          receiverName:
+            type: string
+          beers:
+            type: number
     OAuthURL:
       type: object
       properties:
